@@ -1,26 +1,44 @@
 package com.example.kinoxpbackend.service;
 
+import com.example.kinoxpbackend.dto.EmployeeResponse;
 import com.example.kinoxpbackend.dto.ScreeningRequest;
 import com.example.kinoxpbackend.dto.ScreeningResponse;
 import com.example.kinoxpbackend.entity.Screening;
+import com.example.kinoxpbackend.entity.Shift;
+import com.example.kinoxpbackend.repository.MovieRepository;
 import com.example.kinoxpbackend.repository.ScreeningRepository;
+import com.example.kinoxpbackend.repository.TheaterRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.web.bind.annotation.PathVariable;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class ScreeningService {
     private final ScreeningRepository screeningRepository;
+    private final MovieRepository movieRepository;
+    private final TheaterRepository theaterRepository;
 
-    public ScreeningService(ScreeningRepository screeningRepository) {
+    public ScreeningService(ScreeningRepository screeningRepository, MovieRepository movieRepository, TheaterRepository theaterRepository) {
         this.screeningRepository = screeningRepository;
+        this.movieRepository = movieRepository;
+        this.theaterRepository = theaterRepository;
     }
 
     // GetAll screenings
     public List<ScreeningResponse> getAllScreenings() {
-        return screeningRepository.findAll().stream().map(ScreeningResponse::new).collect(Collectors.toList());
+        List<Screening> screeningList = screeningRepository.findAll();
+        if (screeningList.size() < 1){
+            System.out.println("No list");
+        }
+        else if (screeningList.size() > 1) {
+            System.out.println("There is a List");
+            for (Screening s: screeningList
+                 ) {
+                System.out.println(s);
+            }
+        }
+        return screeningList.stream().map(screening -> new ScreeningResponse(screening)).toList();
     }
     // get screening by id
     public ScreeningResponse getScreeningById(@PathVariable int id) {
@@ -32,18 +50,24 @@ public class ScreeningService {
         if (screeningRepository.existsScreeningById(screeningRequest.getId())) {
             throw new RuntimeException("Screening with this ID already exist");
         }
-        Screening newScreening = ScreeningRequest.getScreeningEntity(screeningRequest);
-        screeningRepository.save(newScreening);
+        Screening createdScreening = Screening.builder()
+            .performance(screeningRequest.getPerformance())
+            .startTime(screeningRequest.getStartTime())
+            .endTime(screeningRequest.getEndTime())
+            .movie(movieRepository.findMovieById(screeningRequest.getMovieId()))
+            .theater(theaterRepository.findTheaterById(screeningRequest.getTheaterId()))
+            .build();
 
-        return new ScreeningResponse(newScreening);
+        //Screening newScreening = ScreeningRequest.getScreeningEntity(screeningRequest);
+        screeningRepository.save(createdScreening);
+
+        return new ScreeningResponse(createdScreening);
     }
 
     // edit screening
     public void editScreening(ScreeningRequest screeningRequest, int id) {
         Screening screening = screeningRepository.findById(id).orElseThrow(() -> new RuntimeException("Screening not found"));
-        if (screeningRequest.getId()!=id) {
-            throw new RuntimeException("Screening ID does not match");
-        }
+
         screening.setPerformance(screeningRequest.getPerformance());
         screening.setStartTime(screeningRequest.getStartTime());
         screening.setEndTime(screeningRequest.getEndTime());
